--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.0.0",
     "@ng-select/ng-select": "^14.2.4",
     "@tailwindcss/postcss": "^4.0.9",
+    "ng-zorro-antd": "^19.1.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.9",
