--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^19.0.0",
     "@ng-select/ng-select": "^14.2.4",
     "@tailwindcss/postcss": "^4.0.9",
+    "google-libphonenumber": "^3.2.40",
     "ng-zorro-antd": "^19.1.0",
+    "ngx-countdown": "^19.0.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.9",
@@ -31,6 +33,7 @@
     "@angular-devkit/build-angular": "^19.0.5",
     "@angular/cli": "^19.0.5",
     "@angular/compiler-cli": "^19.0.0",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
