--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@ng-select/ng-select": "^14.2.4",
+    "@ngrx/signals": "^19.0.1",
     "@tailwindcss/postcss": "^4.0.9",
     "google-libphonenumber": "^3.2.40",
     "ng-zorro-antd": "^19.1.0",
