--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.2.7",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
     "@angular/forms": "^19.0.0",
+    "@angular/localize": "^19.2.4",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@angular/upgrade": "^19.1.3",
     "@ng-select/ng-select": "^14.2.4",
     "@ngrx/signals": "^19.0.1",
     "@tailwindcss/postcss": "^4.0.9",
@@ -25,9 +28,10 @@
     "google-libphonenumber": "^3.2.40",
     "ng-zorro-antd": "^19.1.0",
     "ngx-countdown": "^19.0.0",
+    "node": "^23.11.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.0.9",
+    "tailwindcss": "^4.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -43,6 +47,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "typescript": "^5.8.2"
   }
 }
